# ecosort

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  autoresearch.md  autoresearch.sh  autoresearch_results.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  results.tsv  run_server.py  setup.py
.github/workflows/: ci.yml
data/: DATASETS.md  README.md  manifest.json  status.json
docs/: API.md  DEPLOYMENT.md  MODEL.md
docs/evaluation/: confusion_matrix_test.csv  confusion_matrix_val.csv  evaluation_results.json
ecosort/: __init__.py  config.py  config_validation.py  constants.py  logging_config.py
ecosort.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ecosort/api/: dependencies.py  main.py  schemas.py
ecosort/api/routes/: batch.py  health.py  metrics.py  predict.py
ecosort/data/: dataset.py  download.py  transforms.py  trashnet_mapping.py
ecosort/inference/: predictor.py
ecosort/models/: classifier.py  layers.py
ecosort/training/: metrics.py  scheduler.py  trainer.py
models/exported/: ecosort.onnx  ecosort_quantized.pth
scripts/: benchmark_model.py  download_extended_datasets.py  download_garbage_data.py  download_trashnet.py  evaluate.py  export_model.py  prepare_dataset.py  prepare_extended_dataset.py  recreate_splits.py  reorganize_data.py  train.py  train_full.py
tests/: conftest.py  test_api.py  test_constants.py  test_dataset.py  test_models.py  test_predictor.py
web/: index.html
web/css/: style.css
web/js/: app.js
